--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,232 @@
-.App {
-  text-align: center;
+@charset "UTF-8";
+body {
+  width: 100%;
+  height: 100%;
+  float: left;
+  background-color: rgb(244, 244, 244);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  width: 100%;
+  min-height: 700px;
+  float: left;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+.container .card {
+  width: 40%;
+  min-height: 500px;
+  background-color: white;
+  float: left;
+  border-radius: 30px;
+  padding-bottom: 50px;
+}
+@media screen and (max-width: 400px) {
+  .container .card {
+    width: 90%;
+  }
+}
+@media screen and (min-width: 400px) and (max-width: 1024px) {
+  .container .card {
+    width: 70%;
+    position: absolute;
+    top: 15%;
+    left: 15%;
+  }
+}
+.container .card-title-login {
+  width: 100%;
+  text-align: center;
+  margin-top: 120px;
+  font-weight: 600;
+  font-size: 20px;
+}
+.container .card-title-profile {
+  width: 90%;
+  text-align: left;
+  margin-top: 60px;
+  font-weight: 600;
+  font-size: 20px;
+  margin-left: 5%;
+}
+.container .card .label-login {
+  width: 90%;
+  margin-top: 20px;
+  margin-left: 5%;
+  color: rgb(66, 28, 221);
+  font-weight: 600;
+}
+.container .card .label-profile {
+  width: 90%;
+  margin-top: 10px;
+  margin-left: 5%;
+  color: rgb(165, 168, 173);
+  font-weight: 600;
+}
+.container .card .field {
+  width: 90%;
+  height: 70px;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+.container .card .field .input {
+  width: 90%;
+  margin-top: 10px;
+  background-color: white;
+  border-radius: 8px;
+  background-clip: padding-box;
+  display: block;
+  padding: 0.75rem 0.75rem;
+}
+.container .card .field .input:focus {
+  border: 2px solid #0d6efd;
+  background-color: #e8f1ff;
+}
+.container .card .field .message-error {
+  display: none;
+}
+.container .card .error .input {
+  border: 2px solid #dc3545;
+  background: rgb(255, 240, 240);
+}
+.container .card .error .message-error {
+  display: block;
+  font-size: 12px;
+  color: #dc3545;
+}
+.container .card .form-check {
+  width: 85%;
+  margin-left: 5%;
+  padding-top: 30px;
+  display: flex;
+  justify-content: space-between;
+}
+@media screen and (max-width: 400px) {
+  .container .card .form-check {
+    display: block;
+  }
+}
+.container .card .form-check .form-checkbox {
+  width: 35%;
+  display: flex;
+  position: relative;
+}
+@media screen and (max-width: 400px) {
+  .container .card .form-check .form-checkbox {
+    width: 100%;
+  }
+}
+.container .card .form-check .form-checkbox input[type=checkbox] {
+  text-align: center;
+  display: table-cell;
+  vertical-align: middle;
+  width: 1.2rem !important;
+  height: 1.2rem !important;
+  border: 1px solid rgb(46, 9, 219);
+  appearance: none;
+  border-radius: 20%;
+  box-shadow: none;
+}
+.container .card .form-check .form-checkbox input[type=checkbox]:checked {
+  background-color: rgb(46, 9, 219);
+}
+.container .card .form-check .form-checkbox input[type=checkbox]:checked:after {
+  content: "✓";
   color: white;
+  font-weight: 600;
+  bottom: -5px;
+}
+.container .card .form-check .form-checkbox .check-content {
+  font-weight: 500;
+  float: right;
+}
+.container .card .form-check .btn-signIn {
+  width: 120px;
+  height: 30px;
+  background-color: rgb(46, 9, 219);
+  color: white;
+  border-radius: 8px;
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.5;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  border: 1px solid transparent;
+  padding: 0.2rem 0.75rem;
+  font-size: 0.8rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+.container .card .form-check .btn-signIn:active {
+  opacity: 0.9;
+}
+@media screen and (max-width: 400px) {
+  .container .card .form-check .btn-signIn {
+    width: 100%;
+    margin-top: 10px;
+  }
+}
+.container .card .form-update {
+  width: 85%;
+  margin-left: 5%;
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-between;
+}
+.container .card .form-update .btn-signIn {
+  width: 120px;
+  height: 30px;
+  background-color: rgb(46, 9, 219);
+  color: white;
+  border-radius: 8px;
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.5;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  border: 1px solid transparent;
+  padding: 0.2rem 0.75rem;
+  margin-right: 5px;
+}
+.container .card .form-update .btn-signIn:active {
+  opacity: 0.9;
+}
+@media screen and (max-width: 400px) {
+  .container .card .form-update .btn-signIn {
+    width: 80%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    position: absolute;
+    left: 0;
+    margin-left: 10%;
+  }
+}
+.container .card .form-update .btn-cancel {
+  width: 120px;
+  height: 30px;
+  background-color: rgb(246, 244, 255);
+  color: rgb(46, 9, 219);
+  border-radius: 8px;
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.5;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  border: 1px solid transparent;
+  padding: 0.2rem 0.75rem;
+  font-size: 0.8rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+.container .card .form-update .btn-cancel:active {
+  opacity: 0.8;
+}
+@media screen and (max-width: 400px) {
+  .container .card .form-update .btn-cancel {
+    display: none;
+  }
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/*# sourceMappingURL=App.css.map */
