--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,39 @@ body {
   background-color: rgb(244, 244, 244);
 }
 
+.nav {
+  width: 100%;
+  height: 70px;
+  float: left;
+  color: white;
+  background: rgb(33, 37, 41);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.nav .btn {
+  width: 120px;
+  height: 30px;
+  border: #0d6efd 1px solid;
+  background-color: transparent;
+  color: white;
+  border-radius: 8px;
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.5;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  padding: 0.2rem 0.75rem;
+  margin-right: 5px;
+}
+.nav .btn:active {
+  opacity: 0.9;
+}
+.nav .btn:hover {
+  background-color: #0d6efd;
+}
+
 .container {
   width: 100%;
   min-height: 700px;
