--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -15,7 +15,38 @@ body{
         @content;
     }
 }
-
+.nav{
+    width:100%;
+    height:70px;
+    float:left;
+    color:white;
+    background:rgb(33 37 41);
+    display:flex;
+    justify-content:space-around;
+    align-items:center;
+    .btn{
+        width: 120px;
+        height: 30px;
+        border: #0d6efd 1px solid;
+        background-color: transparent;
+        color: white;
+        border-radius: 8px;
+        display: inline-block;
+        font-weight: 400;
+        line-height: 1.5;
+        text-align: center;
+        text-decoration: none;
+        vertical-align: middle;
+        padding: 0.2rem 0.75rem;
+        margin-right: 5px;
+        &:active{
+            opacity: 0.9;
+        }
+        &:hover{
+            background-color: #0d6efd;
+        }
+    }
+}
 .container{
     width: 100%;
     min-height: 700px;
